Improvements on positioning of events. Overflow of events are hidden. Coordinate system fixing.

--- a/style.css
+++ b/style.css
@@ -31,13 +31,16 @@ body {
     font-size: 11px;
     opacity: 0;
     transition: opacity .15s ease;
+    overflow: hidden;
 }
 
 #grid {
-    max-width: 100%;
-    height: 700px;
-    overflow-y: scroll;
+    max-width: 1200px;
+    /* height: 700px; */
+    /* overflow-y: scroll; */
     border: 1px solid #bbb;
+    /* overflow: hidden; */
+    overflow: scroll;
     
 }
 
@@ -61,7 +64,8 @@ body {
 }
 
 .events {
-    position: absolute;
+    position: relative;
+    top: 64px;
 }
 
 .event {
@@ -73,10 +77,6 @@ body {
     border-radius: 1px;
     overflow: hidden;
     user-select: none;
-}
-
-.event:hover {
-    overflow: visible;
 }
 
 .event:active {
